# rsomics-bed-cluster

./: Cargo.toml  README.md
benches/: bed_cluster.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: basic_cluster.expected  dist5.expected  input.bed
